--- a/TestAngular/TestAngular.csproj
+++ b/TestAngular/TestAngular.csproj
@@ -60,13 +60,21 @@
     <Content Include="app\controllers\MapCtrl.js" />
     <Content Include="app\directives\DynamicMapServiceLayer.js" />
     <Content Include="app\directives\FeatureLayer.js" />
+    <Content Include="app\directives\Legend.js" />
     <Content Include="app\directives\Map.js" />
     <Content Include="app\directives\Navigator.js" />
     <Content Include="app\directives\templates\navigatorTemplate.html" />
     <Content Include="app\index.html" />
+    <Content Include="app\media\images\copapep.png" />
+    <Content Include="app\media\images\copapep_icon.png" />
     <Content Include="app\scripts\init.js" />
     <Content Include="app\main.js" />
     <Content Include="app\scripts\setup.js" />
+    <Content Include="app\styles\indexStyle.css" />
+    <Content Include="app\widgets\css\agsjs.css" />
+    <Content Include="app\widgets\dijit\css\TOC.css" />
+    <Content Include="app\widgets\dijit\templates\tocNode.html" />
+    <Content Include="app\widgets\dijit\TOC.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -81,9 +89,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="app\styles\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
